--- a/lab1.html
+++ b/lab1.html
@@ -5,14 +5,14 @@
 
 </head>
 <body>
+
 <form>
-	Email: <input type="text" name="email">
-	Un: <input type="text" name="username">
-	Pw: <input type="password" name="password">
-	<input type="submit" name="submit" value="submit">
+	Email : <input type="text" name="email" id="txtEmail"><br><br>
+	Username: <input type="text" name="username" id="txtUn"><br><br>
+	Password: <input type="password" name="password" id="txtPassword"><br><br>
+	<input type="submit" name="submit" value="submit" onclick="validateEmptyValues()">
 </form>
 
 <script type="text/javascript" src="script.js"></script>
-
 </body>
 </html>
